# torrentoxide

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml
packaging/: build-deb.sh  run.bat  run.sh
packaging/linux/: torrentoxide.env  torrentoxide.service
packaging/windows/: TorrentOxide.cmd  torrentoxide.wxs
src/: api.rs  app.rs  lib.rs  main.rs  types.rs
src/components/: add_file_select.rs  add_panel.rs  bitfield.rs  boot.rs  calendar_page.rs  confirm_modal.rs  control_deck.rs  dashboard.rs  detail_modal.rs  dir_picker.rs  feeds_page.rs  file_tree.rs  fx.rs  layout.rs  library_page.rs  logticker.rs  mod.rs  scramble.rs  settings_page.rs  sparkline.rs  torrent_list.rs  traffic_graph.rs  wanted_page.rs
src/server/: auth.rs  config.rs  engine.rs  events.rs  logbuf.rs  mod.rs  upload.rs
src/server/pvr/: feed.rs  indexer.rs  meta.rs  mod.rs  quality.rs  scan.rs  store.rs  xmlparse.rs
style/: main.scss
